use CSS grid to prevent text from wrapping below image

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2819,6 +2819,17 @@ ul.columns {
 
 .faculty-member {
     clear: both;
+    display: grid;
+    grid-template-columns: 150px 1fr;
+    grid-column-gap: 1.75em;
+
+    img {
+        grid-column: 1;
+        grid-row-start: 1;
+        grid-row-end: span 20;
+    }
+
+    *:not(img) { grid-column: 2; }
 
     ul, li { list-style-type: none; }
 }
